Requiring only needed stuff

--- a/templates/notifier/mail/failure.erb
+++ b/templates/notifier/mail/failure.erb
@@ -1,5 +1,5 @@
 
-Backup Failed!
+SHRINK DB Backup Failed!
 
 Job: <%= @model.label %> (<%= @model.trigger %>)
 Started:  <%= @model.started_at %>
@@ -13,4 +13,3 @@ See the attached backup log for details.
 ===========================================================================
 <%= Backup::Template.new.result("general/version.erb") %>
 
-<%= Backup::Template.new.result("general/links") %>
